--- a/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
@@ -532,7 +532,7 @@
                     $("#formTieneEntradas").val("" + listaAsientos[index].tieneAsientos);
                     $("#formTieneEntradas").attr("value", listaAsientos[index].tieneAsientos);
 
-                    $('<div><h3>Quedan ' + listaAsientos[index].totalLibres + ' asientos</h3> </div>').appendTo('#canvas');
+                    $('<div style="text-align:center;margin-top:95px"><h3>Quedan</h3><h2> ' + listaAsientos[index].totalLibres + '</h2><h3>asientos</h3> </div>').appendTo('#canvas');
 
 
                 }
