--- a/WebApplication4/WebApplication4/Content/estilos-index2.css
+++ b/WebApplication4/WebApplication4/Content/estilos-index2.css
@@ -1,6 +1,22 @@
 * {    padding: 0px;margin:0px}
+img.bg {
+  /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+	
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+	
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+
 #busqAvanzada{text-align: center; margin-top: 10px;margin-bottom: 10px}
-header{}
+
 #footer{background: #101010;height: 100px;color: white;text-align: center}
 .event{cursor: pointer}
 
