--- a/WebApplication4/WebApplication4/Views/Account/RegisterClient.cshtml
+++ b/WebApplication4/WebApplication4/Views/Account/RegisterClient.cshtml
@@ -167,7 +167,7 @@
             
         </div>
         <div class="col-md-4">
-
+            @{Html.RenderPartial("Destacados");}
         </div>
     </div>
     <br />
