--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/ComprarEntrada.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/ComprarEntrada.cshtml
@@ -29,16 +29,19 @@
 }
 <style>
     #listaEventoPromocion {
-        background-color:white;
-        border:2px solid black;
-        border-radius:10px;
-        
+        background-color: white;
+        border: 2px solid black;
+        border-radius: 10px;
+        padding: 5px;
     }
     #tarjeta {
         background-color: white;
         border: 2px solid black;
         border-radius: 10px;
         
+    }
+    h3 {
+        border-bottom: 1px solid gray;
     }
 </style>
 <div class="container-fluid">
