--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/PagarReserva.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/PagarReserva.cshtml
@@ -21,6 +21,10 @@
         background-color: white;
         border: 2px solid black;
         border-radius: 10px;
+        padding: 5px;
+    }
+    h3 {
+        border-bottom: 1px solid gray;
     }
 </style>
 
@@ -47,7 +51,7 @@
                         @Html.Hidden("subtotalCarrito", "" + Model.Importe)
                         @if (Model.idPromociones[0] == -1)
                         {
-                            <p style="margin-left:2em">- No cuenta con promocion.</p>
+                            <p style="margin-left:2em">- No cuenta con promoción.</p>
                         }
                         else
                         {
