--- a/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
@@ -435,6 +435,7 @@ else
         @RenderSection("scripts", required: false)
 
         <script src="~/Scripts/script_fecha.js"></script>
+        <script src="~/Scripts/busqueda.js"></script>
     </body>
 </html>
 }
