--- a/WebApplication4/WebApplication4/Views/Account/RegisterClient.cshtml
+++ b/WebApplication4/WebApplication4/Views/Account/RegisterClient.cshtml
@@ -176,4 +176,19 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+<script>
+    if (!isNaN(@ViewBag.idCategoria)) {
+        $("#idCategoria > option[value='" + @ViewBag.idCategoria + "'").attr('selected', 'selected');
+        if (!isNaN(@ViewBag.idSubCat)) {
+            $("#idSubCat > option[value='" + @ViewBag.idSubCat + "'").attr('selected', 'selected');
+        }
+    }
+    if (!isNaN(@ViewBag.idRegion)) {
+        $("#idRegion > option[value='" + @ViewBag.idRegion + "'").attr('selected', 'selected');
+        if (!isNaN(@ViewBag.idProv)) {
+            $("#idProv > option[value='" + @ViewBag.idProv + "'").attr('selected', 'selected');
+        }
+    }
+</script>
+
 }
