--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/ComprarEntrada.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/ComprarEntrada.cshtml
@@ -203,5 +203,21 @@
     </div><br />
 </div>
 
-
 <script type="text/javascript" src="@Url.Content("/Scripts/ComprarEntrada/ComprarEntradaHelper.js")"></script>
+@section scripts{    
+    <script>
+    if (!isNaN(@ViewBag.idCategoria)) {
+        $("#idCategoria > option[value='" + @ViewBag.idCategoria + "'").attr('selected', 'selected');
+        if (!isNaN(@ViewBag.idSubCat)) {
+            $("#idSubCat > option[value='" + @ViewBag.idSubCat + "'").attr('selected', 'selected');
+        }
+    }
+    if (!isNaN(@ViewBag.idRegion)) {
+        $("#idRegion > option[value='" + @ViewBag.idRegion + "'").attr('selected', 'selected');
+        if (!isNaN(@ViewBag.idProv)) {
+            $("#idProv > option[value='" + @ViewBag.idProv + "'").attr('selected', 'selected');
+        }
+    }
+</script>
+}
+
