picker en asignar turnoss

--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/Asignacion.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/Asignacion.cshtml
@@ -59,13 +59,13 @@
                 <div class="col-md-5 col-sm-5 col-xs-5">
                     <div class="input-group">
                         <span class="input-group-addon">Desde:</span>
-                        <input id="fini" type="date" class="form-control">
+                        <input id="fini" type="text" class="fechar form-control">
                     </div>
                 </div>
                 <div class="col-md-5 col-sm-5 col-xs-5">
                     <div class="input-group">
                         <span class="input-group-addon">Hasta:</span>
-                        <input id="ffin" type="date" class="form-control">
+                        <input id="ffin" type="text" class="fechar form-control">
                     </div>
                 </div>
             </div>
