--- a/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
@@ -280,7 +280,7 @@
                                                 if (codperfilActual >= 3)//para el promotor
                                                 {
                                                     <center class="form-group col-md-12 col-sm-12">
-                                                        <button type="submit" name="boton" value="reservarOrganizador" class="btn btn-primary">Reservar Organizador<span class="glyphicon glyphicon-save"></span></button>
+                                                        <button type="submit" name="boton" value="reservarOrganizador" class="btn btn-info"><span class="fa fa-ticket fa-lg"></span> Reservar organizador</button>
                                                     </center>
                                                 }
                                                 //para el vendedor tendra un carrito distinto
@@ -289,7 +289,7 @@
                                                    // if (tu != null && tu.estadoCaja == "Abierto")
                                                     //{
                                                         <div class="form-group col-md-12 col-sm-12">
-                                                            <button type="submit" name="boton" value="carritoVendedor" class="btn btn-success">Agregar al carrito <span class="fa fa-shopping-cart"></span></button>
+                                                            <button type="submit" name="boton" value="carritoVendedor" class="btn btn-success"><span class="fa fa-shopping-cart"></span> Agregar al carrito</button>
                                                         </div>
                                                     //}
                                                     //else
