--- a/WebApplication4/WebApplication4/Views/Evento/ExtrasEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/ExtrasEvento.cshtml
@@ -1,5 +1,27 @@
 ﻿@using WebApplication4.Models
 @model ExtrasModel
+<style>
+    td {
+        text-align: center;
+    }
+
+    h3 {
+        border-bottom: 1px solid gray;
+    }
+</style>
+
+<div class="container-fluid">
+    <div class="col-md-10">
+        <ol class="breadcrumb">
+            <li><a href="@Url.Action("Index","Evento")">Mantenimiento de eventos</a></li>
+            <li> Datos generales</li>
+            <li> Bloques de tiempo</li>
+            <li> Funciones</li>
+            <li> Tarifas</li>
+            <li class="active">Extras</li>
+        </ol>
+    </div>
+</div>
 
 <div class="container" id="extras">
     @using (Html.BeginForm("ExtrasEvento", "Evento", FormMethod.Post, new { enctype = "multipart/form-data" }))
@@ -8,8 +30,8 @@
             <br>
             <div class="row">
                 <div class="form-group">
-                    @Html.LabelFor(c => c.MaxReservas, new { @class = "control-label col-md-2" })
-                    <div class="col-md-2">
+                    @Html.LabelFor(c => c.MaxReservas, new { @class = "control-label col-md-4" })
+                    <div class="col-md-4">
                         @Html.TextBoxFor(c => c.MaxReservas, new { @class = "form-control", @type = "number" })
                     </div>
                 </div>
@@ -17,17 +39,17 @@
             </div><br />
             <div class="row">
                 <div class="form-group">
-                    @Html.LabelFor(c => c.PuntosToCliente, new { @class = "control-label col-md-2" })
-                    <div class="col-md-2">
+                    @Html.LabelFor(c => c.PuntosToCliente, new { @class = "control-label col-md-4" })
+                    <div class="col-md-4">
                         @Html.TextBoxFor(c => c.PuntosToCliente, new { @class = "form-control",@type ="number" })
                     </div>
                 </div>
                 @Html.ValidationMessageFor(model => model.PuntosToCliente)
-            </div>
+            </div><br />
             <div class="row">
                 <div class="form-group">
-                    @Html.LabelFor(c => c.Ganancia, new { @class = "control-label col-md-2" })
-                    <div class="col-md-2">
+                    @Html.LabelFor(c => c.Ganancia, new { @class = "control-label col-md-4" })
+                    <div class="col-md-4">
                         <div class="input-group">
                             @Html.TextBoxFor(c => c.Ganancia, new { @class = "form-control", @type = "number" })
                             <span class="input-group-addon" id="ganancia">%</span>
@@ -35,11 +57,11 @@
                     </div>
                 </div>
                 @Html.ValidationMessageFor(model => model.Ganancia)
-            </div>
+            </div><br />
             <div class="row">
                 <div class="form-group">
-                    @Html.LabelFor(c => c.MontFijoVentEnt, new { @class = "control-label col-md-2", @type = "number" })
-                    <div class="col-md-2">
+                    @Html.LabelFor(c => c.MontFijoVentEnt, new { @class = "control-label col-md-4", @type = "number" })
+                    <div class="col-md-4">
                         <div class="input-group">
                             <span class="input-group-addon" id="cancelar">S/.</span>
                             @Html.TextBoxFor(c => c.MontFijoVentEnt, new { @class = "form-control", @type = "number" })
@@ -47,11 +69,11 @@
                     </div>
                 </div>
                 @Html.ValidationMessageFor(model => model.MontFijoVentEnt)
-            </div>
+            </div><br />
             <div class="row">
                 <div class="form-group">
-                    @Html.LabelFor(c => c.PenCancelacion, new { @class = "control-label col-md-2" })
-                    <div class="col-md-2">
+                    @Html.LabelFor(c => c.PenCancelacion, new { @class = "control-label col-md-4" })
+                    <div class="col-md-4">
                         <div class="input-group">
                             <span class="input-group-addon" id="cancelar">S/.</span>
                             @Html.TextBoxFor(c => c.PenCancelacion, new { @class = "form-control", @type = "number" })
@@ -59,11 +81,11 @@
                     </div>
                 </div>
                 @Html.ValidationMessageFor(model => model.PenCancelacion)
-            </div>
+            </div><br />
             <div class="row">
                 <div class="form-group">
-                    @Html.LabelFor(c => c.PenPostergacion, new { @class = "control-label col-md-2" })
-                    <div class="col-md-2">
+                    @Html.LabelFor(c => c.PenPostergacion, new { @class = "control-label col-md-4" })
+                    <div class="col-md-4">
                         <div class="input-group">
                             <span class="input-group-addon" id="postergar">S/.</span>
                             @Html.TextBoxFor(c => c.PenPostergacion, new { @class = "form-control", @type = "number" })
@@ -71,11 +93,11 @@
                     </div>
                 </div>
                 @Html.ValidationMessageFor(model => model.PenPostergacion)
-            </div>
+            </div><br />
             <div class="row">
                 <div class="form-group">
-                    @Html.LabelFor(m => m.ImageEvento, new { @class = "control-label col-md-2" })
-                    <div class="col-md-6">
+                    @Html.LabelFor(m => m.ImageEvento, new { @class = "control-label col-md-4" })
+                    <div class="col-md-4">
                         @Html.TextBoxFor(m => m.ImageEvento, new { type = "file", @class = "form-control" })
                         @if (Model.IEvento != null)
                         {
@@ -88,15 +110,17 @@
             </div>
 
             <div class="row">
-                <div class="form-group">
-                    @Html.LabelFor(m => m.esDestacado, new { @class = "control-label col-md-2" })
-                    @Html.CheckBoxFor(m => m.esDestacado)
+                <div class="col-md-4 col-md-offset-4"  >
+                    <div>
+                        @Html.CheckBoxFor(m => m.esDestacado)
+                        @Html.LabelFor(m => m.esDestacado, new { @class = "control-label" })
+                    </div>                                        
                 </div>
             </div>
             <div class="row">
                 <div class="form-group">
-                    @Html.LabelFor(m => m.ImageDestacado, new { @class = "control-label col-md-2" })
-                    <div class="col-md-6">
+                    @Html.LabelFor(m => m.ImageDestacado, new { @class = "control-label col-md-4" })
+                    <div class="col-md-4">
                         @Html.TextBoxFor(m => m.ImageDestacado, new { type = "file", @class = "form-control" })
                         @if (Model.IDestacado != null)
                         {
@@ -106,20 +130,21 @@
                         @Html.ValidationMessageFor(model => model.ImageDestacado)
                     </div>
                 </div>
-            </div>
+            </div><br />
 
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <div>
+                        @Html.CheckBoxFor(m => m.tieneSitios)
+                        @Html.LabelFor(m => m.tieneSitios, new { @class = "control-label" })
+                    </div>
+                </div>                
+            </div><br />
 
             <div class="row">
                 <div class="form-group">
-                    @Html.LabelFor(m => m.tieneSitios, new { @class = "control-label col-md-2" })
-                    @Html.CheckBoxFor(m => m.tieneSitios)
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="form-group">
-                    @Html.LabelFor(m => m.ImageSitios, new { @class = "control-label col-md-2" })
-                    <div class="col-md-6">
+                    @Html.LabelFor(m => m.ImageSitios, new { @class = "control-label col-md-4" })
+                    <div class="col-md-4">
                         @Html.TextBoxFor(m => m.ImageSitios, new { type = "file", @class = "form-control" })
                         @if (Model.ISitios != null)
                         {
@@ -129,36 +154,35 @@
                         @Html.ValidationMessageFor(model => model.ImageSitios)
                     </div>
                 </div>
-            </div>
+            </div><br />
             <div class="row">
-                <div class="col-md-4 col-md-offset-2">
-                    <div>
-                        @Html.LabelFor(c => c.PermitirReservasWeb, new { @class = "control-label" })
+                <div class="col-md-4 col-md-offset-4">
+                    <div>                        
                         @Html.CheckBoxFor(c => c.PermitirReservasWeb)
+                        @Html.LabelFor(c => c.PermitirReservasWeb, new { @class = "control-label" })
                     </div>
                     <div>
-                        @Html.LabelFor(c => c.PermitirBoletoElectronico, new { @class = "control-label" })
                         @Html.CheckBoxFor(c => c.PermitirBoletoElectronico)
+                        @Html.LabelFor(c => c.PermitirBoletoElectronico, new { @class = "control-label" })                        
                     </div>
-                    <div>
-                        @Html.LabelFor(c => c.PermiteDevolucionPostergacion, new { @class = "control-label" })
+                    <div>                        
                         @Html.CheckBoxFor(c => c.PermiteDevolucionPostergacion)
+                        @Html.LabelFor(c => c.PermiteDevolucionPostergacion, new { @class = "control-label" })
                     </div>
                 </div>
-            </div>
+            </div><br />
             <div class="row">
-                <div class="col-md-2 col-md-offset-5">
+                <center>
                     @if (Session["IdEventoModificado"] != null)
                     {
-                        <button type="submit" class="btn btn-primary">Modificar Evento</button><br /><br />
+                        <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-save"></span> Guardar cambios</button><br /><br />
                     }
                     else
                     {
-                        <button type="submit" class="btn btn-primary">Registrar Evento</button><br /><br />
+                        <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-calendar"></span> Registrar evento</button><br /><br />
                     }
-
-                </div>
-            </div>
+                </center>
+            </div><br />
         </div>
     }
 </div>
