--- a/WebApplication4/WebApplication4/Views/Error/Error403.cshtml
+++ b/WebApplication4/WebApplication4/Views/Error/Error403.cshtml
@@ -3,6 +3,11 @@
     ViewBag.Title = "Error403";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="container">
+    <div class=" col-md-12">
+        <h4>UPS PASÓ ALGO QUE NO DEBERÍA PASAR</h4>
+    </div>
+</div>
 
-<h2>Error 403</h2>
+
 
