--- a/WebApplication4/WebApplication4/Views/Error/Error403.cshtml
+++ b/WebApplication4/WebApplication4/Views/Error/Error403.cshtml
@@ -3,9 +3,24 @@
     ViewBag.Title = "Error403";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="container">
-    <div class=" col-md-12">
-        <h4>UPS PASÓ ALGO QUE NO DEBERÍA PASAR</h4>
+<style>
+    .d {
+        height: inherit;
+    }
+
+    .fondo {
+        background-color: red;
+        color: white;
+    }
+
+    h1 {
+        height: 100%;
+    }
+</style>
+
+<div class="d">
+    <div class="fondo col-md-12">
+        <h1>PASÓ ALGO QUE NO DEBERÍA PASAR</h1>
     </div>
 </div>
 
