--- a/WebApplication4/WebApplication4/Views/Error/General.cshtml
+++ b/WebApplication4/WebApplication4/Views/Error/General.cshtml
@@ -3,8 +3,25 @@
     ViewBag.Title = "General";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="container">
-    <h2>General Error</h2>
+<style>
+    .d {
+        height: inherit;
+    }
+
+    .fondo {
+        background-color: red;
+        color: white;
+    }
+
+    h1 {
+        height: 100%;
+    }
+</style>
+
+<div class="d">
+    <div class="fondo col-md-12">
+        <h1>UPS!! Error.</h1>
+    </div>
 </div>
 
 
