--- a/WebApplication4/WebApplication4/Views/Error/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Error/Index.cshtml
@@ -4,5 +4,22 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Error 404: NotFound</h2>
+<style>
+    .d {
+        height:inherit;
+    }
+    .fondo {
+        background-color: red;
+        color: white;        
+    }
+    h1 {
+        height: 100%;
+    }
+</style>
+
+<div class="d">
+    <div class="fondo col-md-12">
+        <h1>La página a la que intenta dirigirse no existe.</h1>
+    </div>    
+</div>
 
